--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,18 @@ h2 {
     font-size: 42px;
     font-weight: 300;
 }
-img {
+p{
+    font-size: 21px;
+    color: gray;
+}
+.center {
+    margin:auto;
     text-align: center;
-    
+}
+a {
+    color:aquamarine;
+    font-size: 16px;
+}
+#footer {
+    text-align: right;
 }
