--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ h1 {
 h2 {
     font-size: 42px;
     font-weight: 300;
+    color: white;
 }
-p{
+p  { 
     font-size: 21px;
     color: gray;
 }
